force-app/main/default/objects/b3o__Employment_History__c/b3o__Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMP-H-{0}</displayFormat>
        <label>Employment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>