force-app/main/default/objects/b3o__Employment_History__c/fields/b3o__Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Employer_Name__c</fullName>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>