force-app/main/default/objects/b3o__Employment_History__c/fields/b3o__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>b3o__Job_Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>