force-app/main/default/objects/b3o__Employment_History__c/fields/b3o__Location__c.field-meta.xml
<CustomField>
    <fullName>b3o__Location__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>