force-app/main/default/objects/b3o__Employment_History__c/fields/b3o__Main_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>b3o__Main_Responsibilities__c</fullName>
    <label>Main Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>